--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "nunomaduro/collision": "^7.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
+        "phpunit/phpunit": "^10.5",
         "reliese/laravel": "^1.2",
         "spatie/laravel-ignition": "^2.0"
     },
